--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
   <body>
     <div class="main-div">
     <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img" />
+      <img class="top-cloud" src="cloud.png" alt="cloud-img" />
       <h1>I'm Harshal.</h1>
       <h2>a <span>pro</span>grammer. </h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
-      <img src="images/mountain.png" alt="mountain-img" />
+      <img class="bottom-cloud" src="cloud.png" alt="cloud-img" />
+      <img src="mountain.png" alt="mountain-img" />
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img class="my-img" src="images/img4.png" alt="Harshal Profile Pic">
+          <img class="my-img" src="img4.png" alt="Harshal Profile Pic">
           <h2>Hello.</h2>
           <p class="my-text">I am a Full Stack Web Developer. I love <span style="color: red;">❤</span>  coffee and brew my own beers.I love to create Web Applications using Java, SpringBoot, JavaScript, Angular, HTML and CSS.</p>
         </div>
@@ -33,12 +33,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="java-img" src="images/java.png" alt="Java">
+            <img class="java-img" src="java.png" alt="Java">
             <h3>Java Programming</h3>
             <p class="code-skill-java">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic fugiat in velit, amet nisi omnis vero tempora obcaecati quis eligendi!</p>
           </div>
           <div class="skill-row">
-            <img class="web-design-img" src="images/web-design.png" alt="">
+            <img class="web-design-img" src="web-design.png" alt="">
             <h3>Web Design & Development</h3>
             <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
           </div>
